Sonar and JavaDoc issues fixed